nav moved to footer js implemented for pop up media queries used to ensure nav is useable on smaller screens

--- a/library_app/static/main.css
+++ b/library_app/static/main.css
@@ -47,7 +47,6 @@ a:hover{
 }
 
 .book_container{
-
     display : flex;
     flex-direction: row;
     align-content: space-around;
@@ -67,6 +66,16 @@ a:hover{
         padding-right : 0.2rem;
     }
 }
+
+/* footer css */
+footer{
+    position : fixed;
+    bottom : 0;
+    left : 0;
+    height :8%;
+
+}
+
 /* buttons and components */
 .check_btn {
     color : white;
@@ -77,8 +86,53 @@ a:hover{
     border-style: none;
 }
 
+/* pop up nav bar */
+.navBox{
+    background-color: rgba(0,0,0,0.6);
+    height :0%;
+    width : 100%;
+    position : fixed;
+    z-index: 1;
+    right : 0;
+    bottom : 0;
+    transition : 0.8s;
+}
 
-/* search filter forms */
+.nav-links{
+    height : 100%;
+    position: relative;
+    width: 0%;
+    text-align: center;
+    transition :1s;
+}
+
+.pop-link{
+    color : lightgrey;
+    font-size: 2.5em;
+    transition : .3s;
+    margin : .5rem;
+}
+
+@media only screen and (max-height:700px) {
+    .pop-link{
+        font-size : 1.8em;
+    }
+}
+
+.pop-link:hover{
+    color : white;
+}
+
+/* nav bar icon */
+.nav-icon{
+    color : black;
+    font-size: 4rem;
+    position: fixed;
+    right : 75%;
+    top : 85%;
+}
+
+/* search filter forms 
 nav{
     padding-left: 10%;
     padding-right: 10%;
@@ -102,7 +156,6 @@ nav{
     justify-content: space-evenly;
     margin: .3rem;
     letter-spacing: .1em;
-    /*line-height: 3.8em;*/
     text-transform: uppercase;
     font-weight: 700;
     color: black;
@@ -135,6 +188,7 @@ a.nav_section{
     flex-wrap: wrap;
     margin-top: .2rem;
 }
+*/
 
 /* add book icon */
 .add{
@@ -258,7 +312,7 @@ a.nav_section{
 }
 
 .checked:hover {
-    background-color:#F69559
+    background-color:#F69559;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
